--- a/Intensivo-IA/index.html
+++ b/Intensivo-IA/index.html
@@ -2,10 +2,31 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Index</title>
+		<link rel="shortcut icon" href="/logo.svg" type="image/x-icon" />
+
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Shorts Summary</title>
 	</head>
 	<body>
+		<div id="app" class="app">
+			<img src="/logo.svg" alt="Logotipo do Shorts Summary" />
+			<h1>Shorts Summary</h1>
 
-  </body>
+			<form action="" id="form" class="form">
+				<input type="url" id="url" placeholder="URL do vídeo" />
+				<button title="Resumir">
+					<i class="ph ph-play"></i>
+				</button>
+			</form>
+		</div>
+		<script type="module" src="web/main.js"></script>
+		<script src="https://unpkg.com/@phosphor-icons/web"></script>
+	</body>
 </html>
