Finalizada aula 1 (front-end do projeto)

--- a/Intensivo-IA/index.html
+++ b/Intensivo-IA/index.html
@@ -15,7 +15,7 @@
 		<title>Shorts Summary</title>
 	</head>
 	<body>
-		<div id="app" class="app">
+		<div id="app">
 			<img src="/logo.svg" alt="Logotipo do Shorts Summary" />
 			<h1>Shorts Summary</h1>
 
@@ -25,6 +25,9 @@
 					<i class="ph ph-play"></i>
 				</button>
 			</form>
+
+			<h2>Resumo</h2>
+			<p id="content" class="placeholder">Escolha um short para resumir</p>
 		</div>
 		<script type="module" src="web/main.js"></script>
 		<script src="https://unpkg.com/@phosphor-icons/web"></script>
